# EarlySign

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: earlysign.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/explanations/: README.md  [wip]api_structure.md
docs/explanations/methods/: e-values.md  gst.md  sprt.md  stepped-wedge.md  test-and-roll.md
docs/explanations/spending_function_plots/: plot_spending_functions.py
docs/scripts/: README.md  add_missing_toctree.py
docs/source/: auto_toc.py  conf.py  index.rst  index.rst.bak  introduction.rst
docs/source/explanation/: README-ja.md  [wip]api_structure.md
docs/source/explanation/methods/: e-values.md  gst.md  plot_spending_functions.ipynb  stepped-wedge.md  test-and-roll.md
docs/source/explanations/: README-ja.md  README.md
docs/source/explanations/methods/: sprt.md
docs/source/explanations/spending_function_plots/: README.md
docs/source/how-to/: contribute.md
docs/source/tutorial/: README.md
docs/source/tutorial/safetests/: vignette_1.ipynb
docs/source/tutorials/: README.md
docs/source/tutorials/safetests/: vignette_1.ipynb
docs/tutorials/safetests/: vignette_1.ipynb
earlysign/: _smoke_test.py
earlysign/api/v1/: designer.py
earlysign/core/: _types.py  reporter.py  runner.py
earlysign/core/api/: types.py  types_v2.py
earlysign/core/stats/: spending_functions.py
earlysign/stats/common/: condition.py
earlysign/stats/common/group_sequential/: helpers.py  spending_functions.py
earlysign/stats/means/: statistics.py
earlysign/stats/proportions/: proportion_statistics.py  statistics.py
