[tool.poetry]
name = "earlysign"
version = "0.0.0" # version is dynamically provided by poetry-dynamic-versioning during builds
description = "Early signs, faster decisions. A Python library for sequential/safe testing (alpha-spending, e-processes, etc.)."
authors = ["Takeshi Teshima <takeshi.78.teshima@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/takeshi-teshima/EarlySign"
repository = "https://github.com/takeshi-teshima/EarlySign"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
numpy = ">=1.24"
matplotlib = ">=3.7"

[tool.poetry.group.ci.dependencies]
poetry-dynamic-versioning = "^1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

# Simplify publishing to TestPyPI
[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "explicit"

[tool.poetry-dynamic-versioning]
# Enable the plugin to derive the package version from Git metadata (tags) at build time.
enable = true
vcs = "git" # Use Git for versioning
style = "pep440" # PEP 440 compliant versioning style
# Remove the "+..." local version part to avoid PyPI error
format-jinja = """
{%- if distance == 0 -%}
    {{ base }}
{%- else -%}
    {{ base }}.post{{ distance }}
{%- endif -%}
"""
